# edo_gripper

./: CMakeLists.txt  README.md  edo.rviz  package.xml
include/: EdoGripperControl.h
launch/: edo_gripper_dummy.launch  edo_gripper_dummy_upload.launch  gazebo_dummy_gripper.launch  test.launch
meshes/: base.STL  finger_base.STL  finger_tip.STL
models/: dummy_gripper_only.world
models/edo_gripper/: edo_gripper_dummy.sdf  model.config
models/edo_gripper/meshes/: base.STL  finger_base.STL
plugin/: CMakeLists.txt  edo_gripper.h  edo_gripper_plugin.cpp
src/: EdoGripperControl.cpp  edo_gripper_node.cpp
urdf/: edo_gripper_dummy.urdf.xacro  edo_gripper_dummy.xacro
